--- a/Vue/前端自动化测试.md
+++ b/Vue/前端自动化测试.md
@@ -1,3 +1,5 @@
+# 前端自动化测试
+
 ## 1. 单元测试
 
 对软件中的最小可测试单元进行检查和验证，在前端一般为一个模块。
@@ -31,217 +33,217 @@
 
 ### 3.2 常用匹配器
 
-#### 3.2.1 toBe()
+### 3.2.1 toBe()
 
-```javascript
-test("测试toBe的匹配器", () => {
-  const a = { name: "张三" };
-  expect(a).toBe({ name: "张三" });
+```jsx
+test("测试toBe的匹配器", () => {  
+	const a = { name: "张三" };  
+	expect(a).toBe({ name: "张三" });
 });
-// 测试失败：因为引用类型使用toBe不是全等效果
+// ❌ 因为引用类型使用toBe不是全等效果
 ```
 
 `toBe` 匹配器类似于 `===`。
 
 ---
 
-#### 3.2.2 toEqual()
+### 3.2.2 toEqual()
 
-```javascript
-test("测试toEqual的匹配器", () => {
-  const a = { name: "张三" };
-  expect(a).toBe({ name: "张三" });
+```jsx
+test("测试toEqual的匹配器", () => {  
+	const a = { name: "张三" };  
+	expect(a).toBe({ name: "张三" });
 });
-// 测试成功：因为toEqual只是对结果的匹配，而不是全等效果
+// ✅ 因为toEqual只是对结果的匹配，而不是全等效果
 ```
 
 `toEqual` 匹配器只是对结果相等与否进行匹配
 
 ---
 
-#### 3.2.3 toBeNull()
+### 3.2.3 toBeNull()
 
-```javascript
-test("测试toBeNull的匹配器", () => {
-  const a = null;
-  expect(a).toBeNull();
+```jsx
+test("测试toBeNull的匹配器", () => {  
+	const a = null;  
+	expect(a).toBeNull();
 });
-// 测试成功
+// ✅
 ```
 
 `toBeNull` 是对 `null` 值的匹配
 
 ---
 
-#### 3.2.4 toBeUndefined()
+### 3.2.4 toBeUndefined()
 
-```javascript
-test("测试toBeUndefined的匹配器", () => {
-  const a = undefined;
-  expect(a).toBeUndefined();
+```jsx
+test("测试toBeUndefined的匹配器", () => {  
+	const a = undefined;  
+	expect(a).toBeUndefined();
 });
-// 测试成功
+// ✅
 ```
 
 `toBeUndefined` 是对 `undefined` 值的匹配
 
 ---
 
-#### 3.2.5 toBeDefined()
+### 3.2.5 toBeDefined()
 
-```javascript
-test("测试toBeDefined的匹配器", () => {
-  const a = 1;
-  expect(a).toBeDefined();
+```jsx
+test("测试toBeDefined的匹配器", () => {  
+	const a = 1;  
+	expect(a).toBeDefined();
 });
-// 测试成功
+// ✅
 ```
 
 `toBeDefined` 是对已经定义的值的匹配，若为 `undefined` 则不通过
 
 ---
 
-#### 3.2.6 toBeTruthy()
+### 3.2.6 toBeTruthy()
 
-```javascript
-test("测试toBeTruthy的匹配器", () => {
-  const a = 0;
-  expect(a).toBeTruthy();
+```jsx
+test("测试toBeTruthy的匹配器", () => {  
+	const a = 0;  
+	expect(a).toBeTruthy();
 });
-// 0 => 测试失败，因为 toBeTruthy 是对 true 值的匹配
-// 1 => 测试成功
+// 0 => ❌，因为 toBeTruthy 是对 true 值的匹配
+// 1 => ✅
 ```
 
 `toBeTruthy` 是对 `true` 值的匹配
 
 ---
 
-#### 3.2.7 toBeFalsy()
+### 3.2.7 toBeFalsy()
 
-```javascript
-test("测试toBeFalsy的匹配器", () => {
-  const a = 1;
-  expect(a).toBeFalsy();
+```jsx
+test("测试toBeFalsy的匹配器", () => {  
+	const a = 1;  
+	expect(a).toBeFalsy();
 });
-// 1 => 测试失败
-// 0 => 测试成功
+// 1 => ❌
+// 0 => ✅
 ```
 
 `toBeFalsy` 是对 `false` 值的匹配
 
 ---
 
-#### 3.2.8 toBeGreaterThan()
+### 3.2.8 toBeGreaterThan()
 
-```javascript
-test("测试toBeGreaterThan匹配器", () => {
-  const count = 10;
-  expect(a).toBeGreaterThan(9);
+```jsx
+test("测试toBeGreaterThan匹配器", () => {  
+	const count = 10;  
+	expect(a).toBeGreaterThan(9);
 });
-// 成功
+// ✅
 ```
 
 `toBeGreaterThan` 相当于 `>`
 
 ---
 
-#### 3.2.9 toBeLessThan()
+### 3.2.9 toBeLessThan()
 
-```javascript
-test("测试toBeLessThan匹配器", () => {
-  const count = 8;
-  expect(a).toBeLessThan(9);
+```jsx
+test("测试toBeLessThan匹配器", () => {  
+	const count = 8;  
+	expect(a).toBeLessThan(9);
 });
-// 成功
+// ✅
 ```
 
 `toBeLessThan` 相当于 `<`
 
 ---
 
-#### 3.2.10 toBeGreaterThanOrEqual()
+### 3.2.10 toBeGreaterThanOrEqual()
 
-```javascript
-test("测试toBeGreaterThanOrEqual匹配器", () => {
-  const count = 10;
-  expect(a).toBeGreaterThanOrEqual(10);
+```jsx
+test("测试toBeGreaterThanOrEqual匹配器", () => {  
+	const count = 10;  
+	expect(a).toBeGreaterThanOrEqual(10);
 });
-// 成功
+// ✅
 ```
 
 `toBeGreaterThanOrEqual` 相当于 `>=`
 
 ---
 
-#### 3.2.11 toBeLessThanOrEqual()
+### 3.2.11 toBeLessThanOrEqual()
 
-```javascript
-test("测试toBeLessThanOrEqual匹配器", () => {
-  const count = 10;
-  expect(a).toBeLessThanOrEqual(10);
+```jsx
+test("测试toBeLessThanOrEqual匹配器", () => {  
+	const count = 10;  
+	expect(a).toBeLessThanOrEqual(10);
 });
-// 成功
+// ✅
 ```
 
 `toBeLessThanOrEqual` 相当于 `<=`
 
 ---
 
-#### 3.2.12 toBeCloseTo()
+### 3.2.12 toBeCloseTo()
 
-```javascript
-test("测试toBeCloseTo匹配器", () => {
-  const one = 0.1;
-  const two = 0.2;
-  expect(one + two).toEqual(0.3);
+```jsx
+test("测试toBeCloseTo匹配器", () => {  
+	const one = 0.1;  
+	const two = 0.2;  
+	expect(one + two).toEqual(0.3);
 });
-// 失败：因为浮点精度不同
+// ❌ 因为浮点精度不同
 
-test("测试toBeCloseTo匹配器", () => {
-  const one = 0.1;
-  const two = 0.2;
-  expect(one + two).toBeCloseTo(0.3);
+test("测试toBeCloseTo匹配器", () => {  
+	const one = 0.1;  
+	const two = 0.2;  
+	expect(one + two).toBeCloseTo(0.3);
 });
-// 成功
+// ✅
 ```
 
 `toBeCloseTo` 为了解决浮点精度不同导致的无法匹配的问题
 
 ---
 
-#### 3.2.13 toMatch()
+### 3.2.13 toMatch()
 
-```javascript
-test("测试toMatch匹配器", () => {
-  const str = "张三、李四、王五";
-  expect(str).toMatch("李四");
+```jsx
+test("测试toMatch匹配器", () => {  
+	const str = "张三、李四、王五";  
+	expect(str).toMatch("李四");
 });
-// 成功
+// ✅
 
-test("测试toMatch匹配器", () => {
-  const str = "张三、李四、王五";
-  expect(str).toMatch(/李四/);
+test("测试toMatch匹配器", () => {  
+	const str = "张三、李四、王五";  
+	expect(str).toMatch(/李四/);
 });
-// 成功
+// ✅
 ```
 
 `toMatch` 为字符串包含匹配器，用来匹配字符串中包含的内容，也可传正则表达式
 
 ---
 
-#### 3.2.14 toContain()
+### 3.2.14 toContain()
 
-```javascript
-test("测试toContain匹配器", () => {
-  const arr = ["张三", "李四", "王五"];
-  expect(arr).toContain("张三");
+```jsx
+test("测试toContain匹配器", () => {  
+	const arr = ["张三", "李四", "王五"];  
+	expect(arr).toContain("张三");
 });
-// 成功
+// ✅
 
-test("测试toContain匹配器", () => {
-  const arr = ["张三", "李四", "王五"];
-  const data = new Set(arr);
-  expect(data).toContain("张三");
+test("测试toContain匹配器", () => {  
+	const arr = ["张三", "李四", "王五"];  
+	const data = new Set(arr);  
+	expect(data).toContain("张三");
 });
 ```
 
@@ -249,54 +251,51 @@ test("测试toContain匹配器", () => {
 
 ---
 
-#### 3.2.15 toHaveLength()
+### 3.2.15 toHaveLength()
 
-```javascript
+```jsx
 /// functions.js
-export default {
-  getIntArray(num) {
-    if (!Number.isInteger(num)) {
-      throw Error('"getIntArray"只接受整数类型的参数');
-    }
-
-    let result = [];
-    for (let i = 0, len = num; i < len; i++) {
-      result.push(i);
-    }
-
-    return result;
-  }
-};
+export default {  getIntArray(num) {    
+	if (!Number.isInteger(num)) {      
+		throw Error('"getIntArray"只接受整数类型的参数');    
+	}    
+	let result = [];    
+	for (let i = 0, len = num; i < len; i++) {      
+		result.push(i);    
+	}    
+	return result;  
+}};
 
 /// functions.test.js
 import { getIntArray } from "../src/functions";
-
-test("getIntArray(3)返回的数组长度应该为3", () => {
-  expect(getIntArray(3)).toHaveLength(3);
+test("getIntArray(3)返回的数组长度应该为3", () => {  
+	expect(getIntArray(3)).toHaveLength(3);
 });
 ```
 
 `toHaveLength`可以很方便的用来测试字符串和数组类型的长度是否满足预期。
 
-#### 3.2.16 toThrow()
+### 3.2.16 toThrow()
 
-```javascript
-const throwNewErrorFunc = () => {
-  throw new Error("this is a new error");
+```jsx
+const throwNewErrorFunc = () => {  
+	throw new Error("this is a new error");
 };
-test("测试toThrow匹配器", () => {
-  expect(throwNewErrorFunc).toThrow();
+
+test("测试toThrow匹配器", () => {  
+	expect(throwNewErrorFunc).toThrow();
 });
 ```
 
 `toThrow` 是专门对异常进行处理的匹配器，可以检测一个方法会不会抛出异常
 
-```javascript
-const throwNewErrorFunc = () => {
-  throw new Error("this is a new error");
+```jsx
+const throwNewErrorFunc = () => {  
+	throw new Error("this is a new error");
 };
-test("测试toThrow匹配器", () => {
-  expect(throwNewErrorFunc).toThrow("this is a new error");
+
+test("测试toThrow匹配器", () => {  
+	expect(throwNewErrorFunc).toThrow("this is a new error");
 });
 ```
 
@@ -304,44 +303,42 @@ test("测试toThrow匹配器", () => {
 
 ---
 
-#### 3.2.17 not()
+### 3.2.17 not()
 
-```javascript
-const throwNewErrorFunc = () => {
-  throw new Error("this is a new error");
+```jsx
+const throwNewErrorFunc = () => {  
+	throw new Error("this is a new error");
 };
 
-test("测试not匹配器", () => {
-  expect(throwNewErrorFunc).not.toThrow();
+test("测试not匹配器", () => {  
+	expect(throwNewErrorFunc).not.toThrow();
 });
 ```
 
-`not` 匹配器是 `jest` 中比较特殊的匹配器，意思就是 "相反" 或者说 "取反" .比如上面的例子，我们不希望方法抛出异常，就可以使用`not` 匹配器。
+`not` 匹配器是 `jest` 中比较特殊的匹配器，意思就是 “相反” 或者说 “取反” .比如上面的例子，我们不希望方法抛出异常，就可以使用`not` 匹配器。
 
 ---
 
 ### 3.3 异步代码测试方法
 
-#### 3.3.1 回调函数式
+### 3.3.1 回调函数式
 
-```javascript
+```jsx
 /// fetchData.js
 import axios from "axios";
-
-export const fetchData = fn => {
-  axios.get("http://a.jspang.com/jestTest.json").then(res => {
-    fn(res.data);
-  });
+export const fetchData = fn => {  
+	axios.get("http://a.jspang.com/jestTest.json").then(res => {    
+		fn(res.data);  
+	});
 };
 
 /// fetchData.test.js
 import { fetchData } from "./fetchData.js";
-
-test("fetchData测试", done => {
-  fetchData(data => {
-    expect(data).toEqual({ success: true });
-    done();
-  });
+test("fetchData测试", done => {  
+	fetchData(data => {   
+		expect(data).toEqual({ success: true });    
+		done();  
+	});
 });
 ```
 
@@ -349,82 +346,80 @@ test("fetchData测试", done => {
 
 ---
 
-#### 3.3.2 直接返回 Promise
+### 3.3.2 直接返回 Promise
 
-```javascript
+```jsx
 /// fetchTwoData.js
 import axios from "axios";
-
-export const fetchTwoData = () => axios.get("http://a.jspang.com/jestTest.json");
+export const fetchTwoData = () => axios.get("http://a.jspang.com/jestTest.json";
 
 /// fetchTwoData.test.js
 import { fetchTwoData } from "./fetchTwoData.js";
-
-test("fetchTwoData的测试用例", () => {
-  return fetchTwoData().then(res => {
-    expect(res.data).toEqual({ success: true });
-  });
+test("fetchTwoData的测试用例", () => {  
+	return fetchTwoData().then(res => {   
+		expect(res.data).toEqual({ success: true });  
+	});
 });
 ```
 
 注意要 `return`
 
-#### 3.3.3 不存在的接口
+### 3.3.3 不存在的接口
 
-```javascript
+```jsx
 /// fetchData.js
-export const fetchData = () => {
-  return axios.get("http://a.jspang.com/jestTest_error.json"); // 此地址并不存在
+export const fetchData = () => {  
+	return axios.get("http://a.jspang.com/jestTest_error.json"); // 此地址并不存在
 };
 
 /// fetchData.test.js
 // 方式1
-test("fetchData测试", () => {
-  expect.assertions(1); // 断言，必须执行一次 expect
-  return fetchData().catch(err => {
-    expect(err.toString().indexOf("404") > -1).toBe(true);
-  });
+test("fetchData测试", () => {  
+	expect.assertions(1); // 断言，必须执行一次 expect  
+	return fetchData().catch(err => {    
+		expect(err.toString().indexOf("404") > -1).toBe(true);  
+	});
 });
+
 // 方式2
-test("fetchData测试", async () => {
-  return await fetchData().rejects.toThrow();
+test("fetchData测试", async () => {  
+	return await fetchData().rejects.toThrow();
 });
 
 // 方式3
-test("fetchData测试", async () => {
-  expect().assertions(1); // 断言，必须执行一次 expect
-  try {
-    await fetchData();
-  } catch (err) {
-    expect(err.toString().indexOf("404") > -1).toBe(true);
-  }
+test("fetchData测试", async () => {  
+	expect().assertions(1); // 断言，必须执行一次 expect  
+	try {    
+		await fetchData();  
+	} catch (err) {    
+		expect(err.toString().indexOf("404") > -1).toBe(true);  
+	}
 });
 ```
 
 因为测试用例使用了 `catch` 方法，也就是说只有出现异常的时候才会走这个方法，而现在没有出现异常，就不会走这个测试方法，`jest` 就默认这个用例通过了测试。因此必须要执行断言，即必须让其执行一次即可。
 
-#### 3.3.4 async/await
+### 3.3.4 async/await
 
-```javascript
+```jsx
 /// fetchData.js
-export const fetchData = () => {
-  return axios.get("http://a.jspang.com/jestTest.json"); // 此地址并不存在
-};
+export const fetchData = () => {  
+	return axios.get("http://a.jspang.com/jestTest.json"); // 此地址并不存在};
 
 /// fetchData.test.js
 // 方式1
-test("fetchData测试", async () => {
-  await expect(fetchData()).resolves.toMatchObject({
-    data: {
-      success: true
-    }
-  });
+test("fetchData测试", async () => {  
+	await expect(fetchData()).resolves.toMatchObject({    
+		data: {      
+			success: true    
+		}  
+	});
 });
 
 // 方式2
-test("fetchData测试", async () => {
-  const response = await fetchData();
-  expect(response.data).toEqual({ success: true });
+test("fetchData测试", async () => {  
+	const response = await fetchData();  
+	expect(response.data).toEqual({ success: true });
 });
 ```
 
@@ -450,59 +445,52 @@ test("fetchData测试", async () => {
 
 ## 5. jest 测试用例分组
 
-```javascript
+```jsx
 /// eat.js
-export default class Eat {
-  setName(number) {
-    this.name = number === 1 ? "水饺" : "火锅";
-  }
-  setDesc() {
-    this.desc = this.user + "描述";
-  }
-  setMoney() {
-    this.money = this.name === "水饺" ? 80 : 300;
-  }
+export default class Eat {  
+	setName(number) {    
+		this.name = number === 1 ? "水饺" : "火锅";  
+	}  
+	setDesc() {    
+		this.desc = this.user + "描述";  
+	}  
+	setMoney() {    
+		this.money = this.name === "水饺" ? 80 : 300;  
+	}
 }
 
 /// eat.test.js
 import Eat from "./eat";
-
 const eat = new Eat();
-
-beforeAll(() => {
-  console.log("开始吃饭");
+beforeAll(() => {  
+	console.log("开始吃饭");
 });
-
-afterAll(() => {
-  console.log("吃完饭了");
+afterAll(() => {  
+	console.log("吃完饭了");
 });
-
-describe("水饺相关内容", () => {
-  test("测试水饺描述", () => {
-    eat.setName(1);
-    eat.setDesc();
-    expect(eat.desc).toEqual("水饺描述");
-  });
-
-  test("测试水饺价格", () => {
-    eat.setName(1);
-    eat.setMoney();
-    expect(eat.money).toEqual(80);
-  });
+describe("水饺相关内容", () => {  
+	test("测试水饺描述", () => {    
+		eat.setName(1);    
+		eat.setDesc();    
+		expect(eat.desc).toEqual("水饺描述");  
+	});  
+	test("测试水饺价格", () => {    
+		eat.setName(1);    
+		eat.setMoney();    
+		expect(eat.money).toEqual(80);  
+	});
 });
-
-describe("火锅相关内容", () => {
-  test("测试火锅描述", () => {
-    eat.setName(2);
-    eat.setDesc();
-    expect(eat.desc).toEqual("火锅描述");
-  });
-
-  test("测试火锅价格", () => {
-    eat.setName(2);
-    eat.setMoney();
-    expect(eat.money).toEqual(300);
-  });
+describe("火锅相关内容", () => {  
+	test("测试火锅描述", () => {    
+		eat.setName(2);    
+		eat.setDesc();    
+		expect(eat.desc).toEqual("火锅描述");  
+	});  
+	test("测试火锅价格", () => {    
+		eat.setName(2);    
+		eat.setMoney();    
+		expect(eat.money).toEqual(300);  
+	});
 });
 ```
 
@@ -528,9 +516,9 @@ describe("火锅相关内容", () => {
 
 当一个测试文件中的测试用例变得越来越多的时候，假如此时我们相对其中某一个测试用例进行调试，那么我们就需要使用 `test.only`
 
-```javascript
-test.only("测试用例", () => {
-  expect(1 + 1).toBe(2);
+```jsx
+test.only("测试用例", () => {  
+	expect(1 + 1).toBe(2);
 });
 ```
 
@@ -538,27 +526,26 @@ test.only("测试用例", () => {
 
 ### 7.1 作用
 
-#### 7.1.1 捕获函数的调用和返回结果，以及 `this`  和调用顺序
+### 7.1.1 捕获函数的调用和返回结果，以及 `this` 和调用顺序
 
-#### 7.1.2 它可以让我们自由的设置返回结果
+### 7.1.2 它可以让我们自由的设置返回结果
 
-#### 7.1.3 改变内部函数的实现
+### 7.1.3 改变内部函数的实现
 
 ### 7.2 判定函数是否被调用
 
-```javascript
+```jsx
 // demo.js
-export const runCallback = callback => {
-  callback();
+export const runCallback = callback => {  
+	callback();
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-
-test("测试 runCallback", () => {
-  const func = jest.fn();
-  runCallback(func);
-  expect(func).toBeCalled(); // 测试用例被调用
+test("测试 runCallback", () => {  
+	const func = jest.fn();  
+	runCallback(func);  
+	expect(func).toBeCalled(); // 测试用例被调用
 });
 ```
 
@@ -566,21 +553,20 @@ test("测试 runCallback", () => {
 
 ### 7.3 jest.fn().mock.calls 判定函数被调用了几次和传递的参数
 
-```javascript
+```jsx
 // demo.js
-export const runCallback = callback => {
-  callback("张三");
+export const runCallback = callback => {  
+	callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-
-test("测试 runCallback", () => {
-  const func = jest.fn();
-  runCallback(func);
-  runCallback(func);
-  expect(func.mock.calls.length).toBe(2); // 测试用例被调用2次
-  expect(func.mock.calls[0]).toEqual(["张三"]); // 测试用例传递的第一个参数是 "张三"
+test("测试 runCallback", () => {  
+	const func = jest.fn();  
+	runCallback(func);  
+	runCallback(func);  
+	expect(func.mock.calls.length).toBe(2); // 测试用例被调用2次  
+	expect(func.mock.calls[0]).toEqual(["张三"]); // 测试用例传递的第一个参数是 "张三"
 });
 ```
 
@@ -588,27 +574,27 @@ test("测试 runCallback", () => {
 
 ### 7.4 jest.fn().mockReturnValue() 判定函数执行了几次和返回结果
 
-```javascript
+```jsx
 // demo.js
-export const runCallback = callback => {
-  callback("张三");
+export const runCallback = callback => {  
+	callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-
-test("测试 runCallback", () => {
-  const func = jest.fn();
-  // func.mockReturnValue("Common") // 所有模拟返回值都是 "Common"
-  func.mockReturnValueOnce("A"); // 第一次模拟返回值返回 "A"
-  func.mockReturnValueOnce("B"); // 第二次模拟返回值返回 "B"
-  func.mockReturnValueOnce("C"); // 第三次模拟返回值返回 "C"
-  runCallback(func);
-  runCallback(func);
-  runCallback(func);
-  expect(func.mock.results[0].value).toBe("A");
-  expect(func.mock.results[1].value).toBe("B");
-  expect(func.mock.results[2].value).toBe("C");
+test("测试 runCallback", () => {  
+	const func = jest.fn();  
+	// func.mockReturnValue("Common") 
+	// 所有模拟返回值都是 "Common"  
+	func.mockReturnValueOnce("A"); // 第一次模拟返回值返回 "A"  
+	func.mockReturnValueOnce("B"); // 第二次模拟返回值返回 "B"  
+	func.mockReturnValueOnce("C"); // 第三次模拟返回值返回 "C"  
+	runCallback(func);  
+	runCallback(func);  
+	runCallback(func);  
+	expect(func.mock.results[0].value).toBe("A");  
+	expect(func.mock.results[1].value).toBe("B");  
+	expect(func.mock.results[2].value).toBe("C");
 });
 ```
 
@@ -620,64 +606,60 @@ test("测试 runCallback", () => {
 
 ### 7.5 jest.fn().mock.invocationCallOrder 判定函数执行顺序
 
-```javascript
+```jsx
 // demo.js
-export const runCallback = callback => {
-  callback("张三");
+export const runCallback = callback => {  
+	callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-
-test("测试 runCallback", () => {
-  const func = jest.fn();
-  runCallback(func);
-  runCallback(func);
-  runCallback(func);
-  expect(func.mock.invocationCallOrder).toEqual([1, 2, 3]);
+test("测试 runCallback", () => {  
+	const func = jest.fn();  
+	runCallback(func);  
+	runCallback(func);  
+	runCallback(func);  
+	expect(func.mock.invocationCallOrder).toEqual([1, 2, 3]);
 });
 ```
 
 ### 7.6 jest.fn().mock.instances 判定函数调用了几次以及 this 指向
 
-```javascript
+```jsx
 // demo.js
-export const createObject = (ClassItem) => {
-    new ClassItem();
-}
+export const createObject = (ClassItem) => {    
+	new ClassItem();}
 
 // demo.test.js
 import { createObject } from "./demo";
-
-test("测试 createObject", () => {
-    const func = jest.fn();
-    createObject(func);
-    expect(func.mock.instances).toEqual([mockConstructor{}]); // 此处的 this 就是 mockConstructor
+test("测试 createObject", () => {    
+	const func = jest.fn();    
+	createObject(func);    
+	expect(func.mock.instances).toEqual([mockConstructor{}]); // 此处的 this 就是 mockConstructor
 });
 ```
 
 ### 7.7 jest.fn().mockImplementation() 判定函数返回结果和其他逻辑处理
 
-```javascript
+```jsx
 // demo.js
-export const runCallback = callback => {
-  callback("张三");
+export const runCallback = callback => {  
+	callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-
-test("测试 runCallback", () => {
-  const func = jest.fn();
-  // func.mockImplementation(() => "hello"); 等价于 jest.fn(() => "hello")
-  // func.mockImplementation(() => this); 等价于 jest.fn().mockReturnThis()
-  func.mockImplementationOnce(() => "dell");
-  func.mockImplementationOnce(() => "lee");
-  runCallback(func);
-  runCallback(func);
-  runCallback(func);
-  expect(func.mock.results[0].value).toBe("dell");
-  expect(func.mock.results[1].value).toBe("lee");
+test("测试 runCallback", () => {  
+	const func = jest.fn();  
+	// func.mockImplementation(() => "hello"); 等价于 jest.fn(() => "hello")  
+	// func.mockImplementation(() => this); 等价于 jest.fn().mockReturnThis()  
+	func.mockImplementationOnce(() => "dell");  
+	func.mockImplementationOnce(() => "lee");  
+	runCallback(func);  
+	runCallback(func); 
+	runCallback(func);  
+	expect(func.mock.results[0].value).toBe("dell");  
+	expect(func.mock.results[1].value).toBe("lee");
 });
 ```
 
@@ -685,20 +667,19 @@ test("测试 runCallback", () => {
 
 ### 7.8 toBeCalledWith() 来判定每次函数调用时的参数
 
-```javascript
+```jsx
 // demo.js
-export const runCallback = (callback) => {
-    callback("ABC");
+export const runCallback = (callback) => {    
+	callback("ABC");
 }
 
 // demo.test.js
 import { runCallback } from "./demo";
-
-test("测试 runCallback", () => {
-    const func = jest.fn();
-    runCallback(func);
-    expect(func.mock.results[0]).toEqual(["ABC");
-    expect(func).toBeCalledWith("ABC");
+test("测试 runCallback", () => {    
+	const func = jest.fn();    
+	runCallback(func);    
+	expect(func.mock.results[0]).toEqual(["ABC");    
+	expect(func).toBeCalledWith("ABC");
 });
 ```
 
@@ -706,25 +687,23 @@ test("测试 runCallback", () => {
 
 对于前端来说一般异步接口是测试是否发送了，而不测试后端接口返回的内容，是属于后端自动化测试的内容
 
-#### 7.9.1 通过模拟库的方式来模拟异步测试
+### 7.9.1 通过模拟库的方式来模拟异步测试
 
-```javascript
+```jsx
 // demo.js
-export const getData = () => {
-  return axios.get("/api").then(res => res.data);
+export const getData = () => {  
+	return axios.get("/api").then(res => res.data);
 };
 
 // demo.test.js
 import axios from "axios";
 import { getData } from "./demo";
-
 jest.mock("axios"); // 对 axios 进行模拟，这样就不会请求真正数据
-
-test("测试 getData", async () => {
-  axios.get.mockResolvedValue({ data: "hello" }); // 使用 axios 请求的时候模拟成功的返回值就是 hello
-  await getData().then(data => {
-    expect(data).toBe("hello");
-  });
+test("测试 getData", async () => {  
+	axios.get.mockResolvedValue({ data: "hello" }); // 使用 axios 请求的时候模拟成功的返回值就是 hello  
+	await getData().then(data => {    
+		expect(data).toBe("hello");  
+	});
 });
 ```
 
@@ -732,73 +711,71 @@ test("测试 getData", async () => {
 
 `mockResolvedValueOnce` 模拟一次，模拟两次就会报错，需再次调用
 
-#### 7.9.2 通过模拟 Promise 方式模拟异步
+### 7.9.2 通过模拟 Promise 方式模拟异步
 
-```javascript
+```jsx
 // demo.js
-export const fetchData = () => {
-  return axios.get("/").then(res => res.data);
+export const fetchData = () => {  
+	return axios.get("/").then(res => res.data);
 };
+
 // __mocks__/demo.js
-export const fetchData = () => {
-  return new Promise((resolve, reject) => {
-    resolve("function() { return '123' }");
-  });
+export const fetchData = () => {  
+	return new Promise((resolve, reject) => {    
+		resolve("function() { return '123' }");  
+	});
 };
+
 // demo.test.js
 jest.mock("./demo");
 import { fetchData } from "./demo";
-test("测试fetchData", () => {
-  return fetchData().then(data => {
-    expect(eval(data)).toEqual("123");
-  });
+test("测试fetchData", () => {  
+	return fetchData().then(data => {    
+		expect(eval(data)).toEqual("123");  
+	});
 });
 
-/// 实现方式3 修改jest.config.js 可以自动查找项目内部__mocks__下与要测试文件名字相同的文件做替换
-/// 等同于 jest.mock("要测试文件名字相同的__mocks__下的文件")
-{
-  automock: true;
-}
+/// 实现方式3 
+// 修改jest.config.js 可以自动查找项目内部__mocks__下与要测试文件名字相同的文件做替换
+// 等同于 jest.mock("要测试文件名字相同的__mocks__下的文件"){  automock: true; }
 ```
 
-#### 7.9.3 通过修改 jest.config.js 来自动识别**mocks**下的文件
+### 7.9.3 通过修改 jest.config.js 来自动识别**mocks**下的文件
 
 修改 `jest.config.js` 可以自动查找项目内部 `__mocks__` 下与要测试文件名字相同的文件做替换
 
 等同于> `jest.mock("要测试文件名字相同的__mocks__下的文件")`
 
-#### 7.9.4 使用 jest.unmock() 可取消 mock 模拟
+### 7.9.4 使用 jest.unmock() 可取消 mock 模拟
 
-#### 7.9.5 解决测试文件中部分功能不需要 mock，部分功能需要 mock 模拟异步的问题
+### 7.9.5 解决测试文件中部分功能不需要 mock，部分功能需要 mock 模拟异步的问题
 
-```javascript
+```jsx
 // demo.js
-export const fetchData = () => {
-  return axios.get("/").then(res => res.data);
+export const fetchData = () => {  
+	return axios.get("/").then(res => res.data);
 };
-
 export const getNumber = () => 123;
 
 // __mocks__/demo.js
-export const fetchData = () => {
-  return new Promise((resolve, reject) => {
-    resolve("function() { return '123' }");
-  });
+export const fetchData = () => {  
+	return new Promise((resolve, reject) => {    
+		resolve("function() { return '123' }");  
+	});
 };
 
 // demo.test.js
 jest.mock("./demo");
 import { fetchData } from "./demo";
 const { getNumber } = jest.requireActual("./demo"); // 引入真实文件
-
-test("测试 fetchData", () => {
-  return fetchData().then(data => {
-    expect(eval(data)).toEqual("123");
-  });
+test("测试 fetchData", () => {  
+	return fetchData().then(data => {    
+		expect(eval(data)).toEqual("123");  
+	});
 });
 
-test("测试 getNumber", () => {
-  expect(getNumber()).toEqual(123);
+test("测试 getNumber", () => {  
+	expect(getNumber()).toEqual(123);
 });
 ```
 
@@ -808,21 +785,20 @@ test("测试 getNumber", () => {
 
 ### 8.1 toMatchSnapshot()
 
-```javascript
+```jsx
 // demo.js
-export const generateConfig = () => {
-  return {
-    server: "http://localhost",
-    port: 8080,
-    domain: "localhost"
-  };
+export const generateConfig = () => {  
+	return {    
+		server: "http://localhost",    
+		port: 8080,    
+		domain: "localhost"  
+	};
 };
 
 // demo.test.js
 import { generateConfig } from "./demo";
-
-test("测试 generateConfig", () => {
-  expect(generateConfig()).toMatchSnapshot(); // 将会在项目里生成快照文件
+test("测试 generateConfig", () => {  
+	expect(generateConfig()).toMatchSnapshot(); // 将会在项目里生成快照文件
 });
 ```
 
@@ -830,26 +806,27 @@ test("测试 generateConfig", () => {
 
 ### 8.2 测试部分可变变量的内容
 
-```javascript
+```jsx
 // demo.js
-export const generateConfig = () => {
-  return {
-    server: "http://localhost",
-    port: 8080,
-    domain: "localhost",
-    time: new Date(), // 可变变量
-    random: Math.random() // 可变变量
-  };
+export const generateConfig = () => {  
+	return {    
+		server: "http://localhost",    
+		port: 8080,    
+		domain: "localhost",    
+		time: new Date(), 
+		// 可变变量    
+		random: Math.random() 
+		// 可变变量  
+	};
 };
 
 // demo.test.js
 import { generateConfig } from "./demo";
-
-test("测试 generateConfig", () => {
-  expect(generateConfig()).toMatchSnapshot({
-    time: expect.any(Date),
-    random: expect.any(Number)
-  });
+test("测试 generateConfig", () => {  
+	expect(generateConfig()).toMatchSnapshot({    
+		time: expect.any(Date),    
+		random: expect.any(Number)  
+	});
 });
 ```
 
@@ -859,27 +836,28 @@ test("测试 generateConfig", () => {
 
 可以快照放到行内的测试用例中
 
-```javascript
+```jsx
 // demo.js
-export const generateConfig = () => {
-  return {
-    server: "http://localhost",
-    port: 8080,
-    domain: "localhost",
-    time: new Date(), // 可变变量
-    random: Math.random() // 可变变量
-  };
+export const generateConfig = () => {  
+	return {    
+		server: "http://localhost",    
+		port: 8080,    
+		domain: "localhost",    
+		time: new Date(), 
+		// 可变变量    
+		random: Math.random() 
+		// 可变变量  
+	};
 };
 
 // demo.test.js
 import { generateConfig } from "./demo";
-
-test("测试 generateConfig", () => {
-  // toMatchInlineSnapshot 可以快照放到行内的测试用例中
-  expect(generateConfig()).toMatchInlineSnapshot({
-    time: expect.any(Date),
-    random: expect.any(Number)
-  });
+test("测试 generateConfig", () => {  
+	// toMatchInlineSnapshot 可以快照放到行内的测试用例中  
+	expect(generateConfig()).toMatchInlineSnapshot({    
+		time: expect.any(Date),    
+		random: expect.any(Number)  
+	});
 });
 ```
 
@@ -890,13 +868,9 @@ test("测试 generateConfig", () => {
 ### 9.1 TDD 开发流程
 
 1. 编写测试用例（知道功能，先写测试用例）
-
 2. 运行测试，测试用例无法通过测试
-
 3. 编写代码，使测试用例通过测试
-
 4. 优化代码， 完成开发
-
 5. 新增功能，重复执行 1-4
 
 ### 9.2 TDD 的优势
@@ -923,45 +897,44 @@ test("测试 generateConfig", () => {
 
 ### 10.2 vue example
 
-```javascript
+```jsx
 /// testUtils.js
-export const findTestWrapper = (wrapper, tag) => {
-  return wrapper.find(`[data-test="${tag}"]`);
+export const findTestWrapper = (wrapper, tag) => {  
+	return wrapper.find(`[data-test="${tag}"]`);
 };
 ```
 
-```javascript
+```jsx
 /// __tests__/integration/TodoList.test.js
 import { mount } from "@vue/test-utils";
 import { findTestWrapper } from "../../../../utils/testUtils";
 import TodoList from "../../TodoList";
 // import store from "../../../../store"
-
-it(`
-    新增内容逻辑的集成测试
-    1. 用户会在header输入框输入内容
-    2. 用户会点击回车按钮
-  3. 列表项应该增加用户输入内容的列表项
-`, () => {
-  const wrapper = mount(TodoList);
-  // const wrapper = mount(TodoList, { store }) // 如果使用 vuex，也几乎无改动
-  const inputElem = findTestWrapper(wrapper, "header-input").at(0);
-  const content = "Dell lee";
-  inputElem.setValue(content);
-  inputElem.trigger("change");
-  inputElem.trigger("keyup.enter");
-  const listItems = findTestWrapper(wrapper, "list-item").at(0);
-  expect(listItems.length).toBe(1);
-  expect(listItems.at(0).text()).toContain(content);
+it(`    
+	新增内容逻辑的集成测试    
+	1. 用户会在header输入框输入内容    
+	2. 用户会点击回车按钮  
+	3. 列表项应该增加用户输入内容的列表项`, () => {  
+	const wrapper = mount(TodoList);  
+	// const wrapper = mount(TodoList, { store }) 
+	// 如果使用 vuex，也几乎无改动  
+	const inputElem = findTestWrapper(wrapper, "header-input").at(0);  
+	const content = "Dell lee";  
+	inputElem.setValue(content);  
+	inputElem.trigger("change");  
+	inputElem.trigger("keyup.enter");  
+	const listItems = findTestWrapper(wrapper, "list-item").at(0);  
+	expect(listItems.length).toBe(1);  
+	expect(listItems.at(0).text()).toContain(content);
 });
 ```
 
 ### 10.3 react example
 
-```javascript
+```jsx
 /// testUtils.js
-export const findTestWrapper = (wrapper, tag) => {
-  return wrapper.find(`[data-test="${tag}"]`);
+export const findTestWrapper = (wrapper, tag) => {  
+	return wrapper.find(`[data-test="${tag}"]`);
 };
 ```
 
@@ -979,10 +952,17 @@ it(`
     新增内容逻辑的集成测试
     1. 用户会在header输入框输入内容
     2. 用户会点击回车按钮
-  3. 列表项应该增加用户输入内容的列表项
+	  3. 列表项应该增加用户输入内容的列表项
 `, () => {
   const wrapper = mount(<TodoList />);
-  // const wrapper = mount(<Provider store={store}><TodoList /></Provider>)  // 如果使用 redux，也几乎无改动
+  /** 
+		const wrapper = mount(
+			<Provider store={store}>
+				<TodoList /></Provider>
+			</Provider>
+		)  
+		// 如果使用 redux，也几乎无改动
+	*/
   const inputElem = findTestWrapper(wrapper, "header-input");
   const content = "Dell lee";
   inputElem.simulate("change", { target: { value: content } });
@@ -998,10 +978,10 @@ it(`
 ## 11. TDD 和 BDD 的对比
 
 1. `TDD` 先写测试后写代码; `BDD` 先写代码后写测试
-2. `TDD`  创建的是 `unit`  单元测试文件夹，一般结合单元测试，属于白盒测试(知道实现测试代码); `BDD`  创建的是 `integration` 集成测试文件夹，一般结合集成测试，属于黑盒测试(不知道实现测试代码)
-3. `TDD`  测试重点在代码; `BDD`  测试重点在 `UI` ( `DOM`)
-4. `TDD`  安全感低(无法保证各个组件拼撞到一起是否不会有问题); `BDD`  安全感高
-5. `TDD`  速度快; `BDD`  速度慢
+2. `TDD` 创建的是 `unit` 单元测试文件夹，一般结合单元测试，属于白盒测试(知道实现测试代码); `BDD` 创建的是 `integration` 集成测试文件夹，一般结合集成测试，属于黑盒测试(不知道实现测试代码)
+3. `TDD` 测试重点在代码; `BDD` 测试重点在 `UI` ( `DOM`)
+4. `TDD` 安全感低(无法保证各个组件拼撞到一起是否不会有问题); `BDD` 安全感高
+5. `TDD` 速度快; `BDD` 速度慢
 
 ---
 
@@ -1011,31 +991,31 @@ it(`
 
 ### 12.2 对 vuex 的 store 进行测试
 
-```javascript
+```jsx
 /// __tests__/unit/store.test.js
 import store from "../../../../store";
-
-it("当 store 接受 changeInputValue 的 commit 时, inputValue 发生变化", () => {
-  const value = "123";
-  store.commit("changeInputValue", value);
-  expect(store.state.inputValue).toBe(value);
+it("当 store 接受 changeInputValue 的 commit 时, inputValue 发生变化", () => {  
+	const value = "123";  
+	store.commit("changeInputValue", value);  
+	expect(store.state.inputValue).toBe(value);
 });
 ```
 
 ### 12.3 对 redux 的 store 进行测试
 
-```javascript
+```jsx
 /// __tests__/unit/store.test.js
 import store from "../../../../store/createStore";
 import { changeInputValue } from "../../../../store/actions";
-
-it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化", () => {
-  const value = "123";
-  /**
-   const changeInputValue = (payload) => ({ type: CHANGE_IMPUT_VALUE, payload })
-   */
-  store.dispatch(changeInputValue(value));
-  expect(store.getState().inputValue).toBe(value);
+it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化", () => {  
+	const value = "123";  
+	/**   
+		const changeInputValue = (payload) => ({ 
+			type: CHANGE_IMPUT_VALUE, payload 
+		})   
+	*/  
+	store.dispatch(changeInputValue(value));  
+	expect(store.getState().inputValue).toBe(value);
 });
 ```
 
@@ -1047,29 +1027,24 @@ it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化"
 
 ### 13.1 vue 的异步测试
 
-```javascript
+```jsx
 /// __mocks__/axios.js
-const undoList = {
-  success: true,
-  data: [
-    { status: "div", value: "dell" },
-    { status: "div", value: "lee" }
-  ]
-};
-
-export default {
-  get(url) {
-    if (url === "/getUndoList.json") {
-      return new Promise((resolve, reject) => {
-        if (this.success === true) {
-          resolve(undoList);
-        } else {
-          reject(new Error());
-        }
-      });
-    }
-  }
-};
+const undoList = {  success: true,  data: [    
+	{ status: "div", value: "dell" },    
+	{ status: "div", value: "lee" }  
+]};
+export default {  
+	get(url) {    
+		if (url === "/getUndoList.json") {      
+			return new Promise((resolve, reject) => {        
+				if (this.success === true) {          
+					resolve(undoList);        
+				} else {          
+					reject(new Error());        
+				}      
+			});    
+		}  
+	}};
 
 /// __tests__/integration/TodoList.test.js
 import { mount } from "@vue/test-utils";
@@ -1077,50 +1052,38 @@ import { findTestWrapper } from "../../../../utils/testUtils";
 import TodoList from "../../TodoList";
 import store from "../../../../store";
 
-beforeEach(() => {
-  axios.success = true;
-  jest.useFakeTimers(); // 写在钩子函数中的意义是为了清除统计次数，重新开始，防止上一个测试用例对下一个测试用例产生影响
+beforeEach(() => {  
+	axios.success = true;  
+	jest.useFakeTimers(); // 写在钩子函数中的意义是为了清除统计次数，重新开始，防止上一个测试用例对下一个测试用例产生影响});
+it(`1. 用户进入页面时，请求远程测试; 2. 列表应该显示远程返回的数据`, done => {  
+		const wrapper = mount(TodoList, { store });  
+		wrapper.vm.$nickTick(() => {    
+			const listItems = findTestWrapper(wrapper, "list-item");    
+			expect(listItems.length).toBe(2);    
+			done();  
+		});
+	});
+it(`1. 用户进入页面时，等待5s; 2. 列表应该显示远程返回的数据`, done => {  
+	const wrapper = mount(TodoList, { store });  
+	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器  
+	jest.runAllTimers();  
+	wrapper.vm.$nickTick(() => {    
+		const listItems = findTestWrapper(wrapper, "list-item");    
+		expect(listItems.length).toBe(2);    
+		done();  
+	});
 });
 
-it(`
-    1. 用户进入页面时，请求远程测试
-    2. 列表应该显示远程返回的数据
-`, done => {
-  const wrapper = mount(TodoList, { store });
-  wrapper.vm.$nickTick(() => {
-    const listItems = findTestWrapper(wrapper, "list-item");
-    expect(listItems.length).toBe(2);
-    done();
-  });
-});
-
-it(`
-    1. 用户进入页面时，等待5s
-    2. 列表应该显示远程返回的数据
-`, done => {
-  const wrapper = mount(TodoList, { store });
-  expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
-  jest.runAllTimers();
-  wrapper.vm.$nickTick(() => {
-    const listItems = findTestWrapper(wrapper, "list-item");
-    expect(listItems.length).toBe(2);
-    done();
-  });
-});
-
-it(`
-  1. 用户进入页面时，请求远程数据失败
-  2. 列表应该显示空数据，不应该挂掉
-`, done => {
-  axios.success = false;
-  const wrapper = mount(TodoList, { store });
-  expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
-  jest.runAllTimers();
-  wrapper.vm.$nickTick(() => {
-    const listItems = findTestWrapper(wrapper, "list-item");
-    expect(listItems.length).toBe(0);
-    done();
-  });
+it(`1. 用户进入页面时，请求远程数据失败; 2. 列表应该显示空数据，不应该挂掉`, done => {  
+	axios.success = false;  
+	const wrapper = mount(TodoList, { store });  
+	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器  
+	jest.runAllTimers();  
+	wrapper.vm.$nickTick(() => {    
+		const listItems = findTestWrapper(wrapper, "list-item");    
+		expect(listItems.length).toBe(0);    
+		done();  
+	});
 });
 ```
 
@@ -1227,26 +1190,24 @@ it(`
 
 ### 14.1 使用传统方式对 vue 组件进行测试
 
-```javascript
+```jsx
 // HelloWorld.test.js
 import Vue from "vue";
 import HelloWorld from "@/components/HelloWorld";
-
-describe("HelloWorld.vue", () => {
-  it("renders props.msg when passed", () => {
-    const root = document.createElement("div");
-    root.className = "root";
-    document.body.appendChild(root);
-    new Vue({
-      render: h =>
-        h(HelloWorld, {
-          props: {
-            msg: "dell lee"
-          }
-        })
-    }).$mount(".root");
-    expect(document.getElementByClassName("hello").length).toBe(1);
-  });
+describe("HelloWorld.vue", () => {  
+	it("renders props.msg when passed", () => {    
+		const root = document.createElement("div");    
+		root.className = "root";    
+		document.body.appendChild(root);   
+		new Vue({      
+			render: h => h(HelloWorld, {          
+				props: {            
+					msg: "dell lee"          
+				}        
+			})    
+		}).$mount(".root");    
+		expect(document.getElementByClassName("hello").length).toBe(1);  
+	});
 });
 ```
 
@@ -1256,43 +1217,41 @@ describe("HelloWorld.vue", () => {
 
 - [官方文档](https://vue-test-utils.vuejs.org/zh/)
 
-#### 14.2.1 for example
+### 14.2.1 for example
 
-```javascript
+```jsx
 // HelloWorld.test.js
-import { shallowMount } from "@.=vue/test-utils";
+import { shallowMount } from "@vue/test-utils";
 import HelloWorld from "@/components/HelloWorld";
-
-describe("HelloWorld.vue", () => {
-  it("renders props.msg when passed", () => {
-    const msg = "dell lee";
-    const wrapper = shallowMount(HelloWorld, {
-      propsData: { msg }
-    });
-    expect(wrapper.text()).toMatch(msg);
-  });
+describe("HelloWorld.vue", () => {  
+	it("renders props.msg when passed", () => {    
+		const msg = "dell lee";    
+		const wrapper = shallowMount(HelloWorld, {      
+			propsData: { msg }    
+		});    
+		expect(wrapper.text()).toMatch(msg);  
+	});
 });
 ```
 
-#### 14.2.2 快照测试
+### 14.2.2 快照测试
 
 使用场景: 一般用于测试组件正常渲染，而不测试组件功能时使用。比如对样式和布局的修改做监听
 
 好处: 可以帮助我们及时发现组件中 `dom` 结构的变化
 
-```javascript
+```jsx
 // HelloWorld.test.js
-import { shallowMount } from "@.=vue/test-utils";
+import { shallowMount } from "@vue/test-utils";
 import HelloWorld from "@/components/HelloWorld";
-
-describe("HelloWorld.vue 组件渲染正常", () => {
-  it("renders props.msg when passed", () => {
-    const msg = "dell lee";
-    const wrapper = shallowMount(HelloWorld, {
-      propsData: { msg }
-    });
-    expect(wrapper).toMatchSnapshot();
-  });
+describe("HelloWorld.vue 组件渲染正常", () => {  
+	it("renders props.msg when passed", () => {    
+		const msg = "dell lee";    
+		const wrapper = shallowMount(HelloWorld, {      
+			propsData: { msg }    
+		});    
+		expect(wrapper).toMatchSnapshot();  
+	});
 });
 ```
 
@@ -1321,24 +1280,21 @@ it("render App", () => {
 ### 15.2 enzyme 的配置和使用
 
 - [官方文档](https://enzymejs.github.io/enzyme/)
-
 - [github](https://github.com/enzymejs/enzyme)
-
 - [jest-enzyme](https://github.com/enzymejs/enzyme-matchers/tree/master/packages/jest-enzyme)
 
-#### 15.2.1 for example
+### 15.2.1 for example
 
-```javascript
+```jsx
 // App.test.js
 import React from "react";
 import Enzyme, { shallow } from "enzyme";
 import Adapter from "enzyme-adapter-react-16";
 import App from "App";
 Enzyme.configure({ adapter: new Adapter() });
-
-it("render App", () => {
-  const wrapper = shallow(<App />);
-  expect(wrapper.find('[data-test="App"]').length).toBe(2);
+it("render App", () => {  
+	const wrapper = shallow(<App />);  
+	expect(wrapper.find('[data-test="App"]').length).toBe(2);
 });
 ```
 
@@ -1348,23 +1304,22 @@ it("render App", () => {
 
 单元测试时更倾向于使用 `api` `.state()` ；集成测试时更倾向于使用 `api` `.prop()`
 
-#### 15.2.2 快照测试
+### 15.2.2 快照测试
 
 使用场景: 一般用于测试组件正常渲染，而不测试组件功能时使用。比如对样式和布局的修改做监听
 
 好处: 可以帮助我们及时发现组件中 `dom` 结构的变化
 
-```javascript
+```jsx
 // App.test.js
 import React from "react";
 import Enzyme, { shallow } from "enzyme";
 import Adapter from "enzyme-adapter-react-16";
 import App from "App";
 Enzyme.configure({ adapter: new Adapter() });
-
-it("render App", () => {
-  const wrapper = shallow(<App />);
-  expect(wrapper).toMatchSnapshot();
+it("render App", () => {  
+	const wrapper = shallow(<App />);  
+	expect(wrapper).toMatchSnapshot();
 });
 ```
 
@@ -1373,13 +1328,9 @@ it("render App", () => {
 ## 16. 前端自动化测试的优势
 
 - 更好的代码组织，项目的可维护性强
-
 - 更少的 `Bug` 出现概率，尤其是回归测试中的 `Bug`
-
 - 修改工程质量差的项目，更加安全
-
 - 项目具备潜在的文档特性
-
 - 扩展前端的知识面
 
 ## 17 总结重要的点
