--- a/Vue/前端自动化测试.md
+++ b/Vue/前端自动化测试.md
@@ -36,9 +36,9 @@
 ### 3.2.1 toBe()
 
 ```jsx
-test("测试toBe的匹配器", () => {  
-	const a = { name: "张三" };  
-	expect(a).toBe({ name: "张三" });
+test("测试toBe的匹配器", () => {
+  const a = { name: "张三" };
+  expect(a).toBe({ name: "张三" });
 });
 // ❌ 因为引用类型使用toBe不是全等效果
 ```
@@ -50,9 +50,9 @@ test("测试toBe的匹配器", () => {
 ### 3.2.2 toEqual()
 
 ```jsx
-test("测试toEqual的匹配器", () => {  
-	const a = { name: "张三" };  
-	expect(a).toBe({ name: "张三" });
+test("测试toEqual的匹配器", () => {
+  const a = { name: "张三" };
+  expect(a).toBe({ name: "张三" });
 });
 // ✅ 因为toEqual只是对结果的匹配，而不是全等效果
 ```
@@ -64,9 +64,9 @@ test("测试toEqual的匹配器", () => {
 ### 3.2.3 toBeNull()
 
 ```jsx
-test("测试toBeNull的匹配器", () => {  
-	const a = null;  
-	expect(a).toBeNull();
+test("测试toBeNull的匹配器", () => {
+  const a = null;
+  expect(a).toBeNull();
 });
 // ✅
 ```
@@ -78,9 +78,9 @@ test("测试toBeNull的匹配器", () => {
 ### 3.2.4 toBeUndefined()
 
 ```jsx
-test("测试toBeUndefined的匹配器", () => {  
-	const a = undefined;  
-	expect(a).toBeUndefined();
+test("测试toBeUndefined的匹配器", () => {
+  const a = undefined;
+  expect(a).toBeUndefined();
 });
 // ✅
 ```
@@ -92,9 +92,9 @@ test("测试toBeUndefined的匹配器", () => {
 ### 3.2.5 toBeDefined()
 
 ```jsx
-test("测试toBeDefined的匹配器", () => {  
-	const a = 1;  
-	expect(a).toBeDefined();
+test("测试toBeDefined的匹配器", () => {
+  const a = 1;
+  expect(a).toBeDefined();
 });
 // ✅
 ```
@@ -106,9 +106,9 @@ test("测试toBeDefined的匹配器", () => {
 ### 3.2.6 toBeTruthy()
 
 ```jsx
-test("测试toBeTruthy的匹配器", () => {  
-	const a = 0;  
-	expect(a).toBeTruthy();
+test("测试toBeTruthy的匹配器", () => {
+  const a = 0;
+  expect(a).toBeTruthy();
 });
 // 0 => ❌，因为 toBeTruthy 是对 true 值的匹配
 // 1 => ✅
@@ -121,9 +121,9 @@ test("测试toBeTruthy的匹配器", () => {
 ### 3.2.7 toBeFalsy()
 
 ```jsx
-test("测试toBeFalsy的匹配器", () => {  
-	const a = 1;  
-	expect(a).toBeFalsy();
+test("测试toBeFalsy的匹配器", () => {
+  const a = 1;
+  expect(a).toBeFalsy();
 });
 // 1 => ❌
 // 0 => ✅
@@ -136,9 +136,9 @@ test("测试toBeFalsy的匹配器", () => {
 ### 3.2.8 toBeGreaterThan()
 
 ```jsx
-test("测试toBeGreaterThan匹配器", () => {  
-	const count = 10;  
-	expect(a).toBeGreaterThan(9);
+test("测试toBeGreaterThan匹配器", () => {
+  const count = 10;
+  expect(a).toBeGreaterThan(9);
 });
 // ✅
 ```
@@ -150,9 +150,9 @@ test("测试toBeGreaterThan匹配器", () => {
 ### 3.2.9 toBeLessThan()
 
 ```jsx
-test("测试toBeLessThan匹配器", () => {  
-	const count = 8;  
-	expect(a).toBeLessThan(9);
+test("测试toBeLessThan匹配器", () => {
+  const count = 8;
+  expect(a).toBeLessThan(9);
 });
 // ✅
 ```
@@ -164,9 +164,9 @@ test("测试toBeLessThan匹配器", () => {
 ### 3.2.10 toBeGreaterThanOrEqual()
 
 ```jsx
-test("测试toBeGreaterThanOrEqual匹配器", () => {  
-	const count = 10;  
-	expect(a).toBeGreaterThanOrEqual(10);
+test("测试toBeGreaterThanOrEqual匹配器", () => {
+  const count = 10;
+  expect(a).toBeGreaterThanOrEqual(10);
 });
 // ✅
 ```
@@ -178,9 +178,9 @@ test("测试toBeGreaterThanOrEqual匹配器", () => {
 ### 3.2.11 toBeLessThanOrEqual()
 
 ```jsx
-test("测试toBeLessThanOrEqual匹配器", () => {  
-	const count = 10;  
-	expect(a).toBeLessThanOrEqual(10);
+test("测试toBeLessThanOrEqual匹配器", () => {
+  const count = 10;
+  expect(a).toBeLessThanOrEqual(10);
 });
 // ✅
 ```
@@ -192,17 +192,17 @@ test("测试toBeLessThanOrEqual匹配器", () => {
 ### 3.2.12 toBeCloseTo()
 
 ```jsx
-test("测试toBeCloseTo匹配器", () => {  
-	const one = 0.1;  
-	const two = 0.2;  
-	expect(one + two).toEqual(0.3);
+test("测试toBeCloseTo匹配器", () => {
+  const one = 0.1;
+  const two = 0.2;
+  expect(one + two).toEqual(0.3);
 });
 // ❌ 因为浮点精度不同
 
-test("测试toBeCloseTo匹配器", () => {  
-	const one = 0.1;  
-	const two = 0.2;  
-	expect(one + two).toBeCloseTo(0.3);
+test("测试toBeCloseTo匹配器", () => {
+  const one = 0.1;
+  const two = 0.2;
+  expect(one + two).toBeCloseTo(0.3);
 });
 // ✅
 ```
@@ -214,15 +214,15 @@ test("测试toBeCloseTo匹配器", () => {
 ### 3.2.13 toMatch()
 
 ```jsx
-test("测试toMatch匹配器", () => {  
-	const str = "张三、李四、王五";  
-	expect(str).toMatch("李四");
+test("测试toMatch匹配器", () => {
+  const str = "张三、李四、王五";
+  expect(str).toMatch("李四");
 });
 // ✅
 
-test("测试toMatch匹配器", () => {  
-	const str = "张三、李四、王五";  
-	expect(str).toMatch(/李四/);
+test("测试toMatch匹配器", () => {
+  const str = "张三、李四、王五";
+  expect(str).toMatch(/李四/);
 });
 // ✅
 ```
@@ -234,16 +234,16 @@ test("测试toMatch匹配器", () => {
 ### 3.2.14 toContain()
 
 ```jsx
-test("测试toContain匹配器", () => {  
-	const arr = ["张三", "李四", "王五"];  
-	expect(arr).toContain("张三");
+test("测试toContain匹配器", () => {
+  const arr = ["张三", "李四", "王五"];
+  expect(arr).toContain("张三");
 });
 // ✅
 
-test("测试toContain匹配器", () => {  
-	const arr = ["张三", "李四", "王五"];  
-	const data = new Set(arr);  
-	expect(data).toContain("张三");
+test("测试toContain匹配器", () => {
+  const arr = ["张三", "李四", "王五"];
+  const data = new Set(arr);
+  expect(data).toContain("张三");
 });
 ```
 
@@ -255,21 +255,23 @@ test("测试toContain匹配器", () => {
 
 ```jsx
 /// functions.js
-export default {  getIntArray(num) {    
-	if (!Number.isInteger(num)) {      
-		throw Error('"getIntArray"只接受整数类型的参数');    
-	}    
-	let result = [];    
-	for (let i = 0, len = num; i < len; i++) {      
-		result.push(i);    
-	}    
-	return result;  
-}};
+export default {
+  getIntArray(num) {
+    if (!Number.isInteger(num)) {
+      throw Error('"getIntArray"只接受整数类型的参数');
+    }
+    let result = [];
+    for (let i = 0, len = num; i < len; i++) {
+      result.push(i);
+    }
+    return result;
+  }
+};
 
 /// functions.test.js
 import { getIntArray } from "../src/functions";
-test("getIntArray(3)返回的数组长度应该为3", () => {  
-	expect(getIntArray(3)).toHaveLength(3);
+test("getIntArray(3)返回的数组长度应该为3", () => {
+  expect(getIntArray(3)).toHaveLength(3);
 });
 ```
 
@@ -278,24 +280,24 @@ test("getIntArray(3)返回的数组长度应该为3", () => {
 ### 3.2.16 toThrow()
 
 ```jsx
-const throwNewErrorFunc = () => {  
-	throw new Error("this is a new error");
+const throwNewErrorFunc = () => {
+  throw new Error("this is a new error");
 };
 
-test("测试toThrow匹配器", () => {  
-	expect(throwNewErrorFunc).toThrow();
+test("测试toThrow匹配器", () => {
+  expect(throwNewErrorFunc).toThrow();
 });
 ```
 
 `toThrow` 是专门对异常进行处理的匹配器，可以检测一个方法会不会抛出异常
 
 ```jsx
-const throwNewErrorFunc = () => {  
-	throw new Error("this is a new error");
+const throwNewErrorFunc = () => {
+  throw new Error("this is a new error");
 };
 
-test("测试toThrow匹配器", () => {  
-	expect(throwNewErrorFunc).toThrow("this is a new error");
+test("测试toThrow匹配器", () => {
+  expect(throwNewErrorFunc).toThrow("this is a new error");
 });
 ```
 
@@ -306,12 +308,12 @@ test("测试toThrow匹配器", () => {
 ### 3.2.17 not()
 
 ```jsx
-const throwNewErrorFunc = () => {  
-	throw new Error("this is a new error");
+const throwNewErrorFunc = () => {
+  throw new Error("this is a new error");
 };
 
-test("测试not匹配器", () => {  
-	expect(throwNewErrorFunc).not.toThrow();
+test("测试not匹配器", () => {
+  expect(throwNewErrorFunc).not.toThrow();
 });
 ```
 
@@ -326,19 +328,19 @@ test("测试not匹配器", () => {
 ```jsx
 /// fetchData.js
 import axios from "axios";
-export const fetchData = fn => {  
-	axios.get("http://a.jspang.com/jestTest.json").then(res => {    
-		fn(res.data);  
-	});
+export const fetchData = fn => {
+  axios.get("http://a.jspang.com/jestTest.json").then(res => {
+    fn(res.data);
+  });
 };
 
 /// fetchData.test.js
 import { fetchData } from "./fetchData.js";
-test("fetchData测试", done => {  
-	fetchData(data => {   
-		expect(data).toEqual({ success: true });    
-		done();  
-	});
+test("fetchData测试", done => {
+  fetchData(data => {
+    expect(data).toEqual({ success: true });
+    done();
+  });
 });
 ```
 
@@ -355,9 +357,9 @@ export const fetchTwoData = () => axios.get("http://a.jspang.com/jestTest.json";
 
 /// fetchTwoData.test.js
 import { fetchTwoData } from "./fetchTwoData.js";
-test("fetchTwoData的测试用例", () => {  
-	return fetchTwoData().then(res => {   
-		expect(res.data).toEqual({ success: true });  
+test("fetchTwoData的测试用例", () => {
+	return fetchTwoData().then(res => {
+		expect(res.data).toEqual({ success: true });
 	});
 });
 ```
@@ -368,32 +370,32 @@ test("fetchTwoData的测试用例", () => {
 
 ```jsx
 /// fetchData.js
-export const fetchData = () => {  
-	return axios.get("http://a.jspang.com/jestTest_error.json"); // 此地址并不存在
+export const fetchData = () => {
+  return axios.get("http://a.jspang.com/jestTest_error.json"); // 此地址并不存在
 };
 
 /// fetchData.test.js
 // 方式1
-test("fetchData测试", () => {  
-	expect.assertions(1); // 断言，必须执行一次 expect  
-	return fetchData().catch(err => {    
-		expect(err.toString().indexOf("404") > -1).toBe(true);  
-	});
+test("fetchData测试", () => {
+  expect.assertions(1); // 断言，必须执行一次 expect
+  return fetchData().catch(err => {
+    expect(err.toString().indexOf("404") > -1).toBe(true);
+  });
 });
 
 // 方式2
-test("fetchData测试", async () => {  
-	return await fetchData().rejects.toThrow();
+test("fetchData测试", async () => {
+  return await fetchData().rejects.toThrow();
 });
 
 // 方式3
-test("fetchData测试", async () => {  
-	expect().assertions(1); // 断言，必须执行一次 expect  
-	try {    
-		await fetchData();  
-	} catch (err) {    
-		expect(err.toString().indexOf("404") > -1).toBe(true);  
-	}
+test("fetchData测试", async () => {
+  expect().assertions(1); // 断言，必须执行一次 expect
+  try {
+    await fetchData();
+  } catch (err) {
+    expect(err.toString().indexOf("404") > -1).toBe(true);
+  }
 });
 ```
 
@@ -403,22 +405,22 @@ test("fetchData测试", async () => {
 
 ```jsx
 /// fetchData.js
-export const fetchData = () => {  
+export const fetchData = () => {
 	return axios.get("http://a.jspang.com/jestTest.json"); // 此地址并不存在};
 
 /// fetchData.test.js
 // 方式1
-test("fetchData测试", async () => {  
-	await expect(fetchData()).resolves.toMatchObject({    
-		data: {      
-			success: true    
-		}  
+test("fetchData测试", async () => {
+	await expect(fetchData()).resolves.toMatchObject({
+		data: {
+			success: true
+		}
 	});
 });
 
 // 方式2
-test("fetchData测试", async () => {  
-	const response = await fetchData();  
+test("fetchData测试", async () => {
+	const response = await fetchData();
 	expect(response.data).toEqual({ success: true });
 });
 ```
@@ -447,50 +449,50 @@ test("fetchData测试", async () => {
 
 ```jsx
 /// eat.js
-export default class Eat {  
-	setName(number) {    
-		this.name = number === 1 ? "水饺" : "火锅";  
-	}  
-	setDesc() {    
-		this.desc = this.user + "描述";  
-	}  
-	setMoney() {    
-		this.money = this.name === "水饺" ? 80 : 300;  
-	}
+export default class Eat {
+  setName(number) {
+    this.name = number === 1 ? "水饺" : "火锅";
+  }
+  setDesc() {
+    this.desc = this.user + "描述";
+  }
+  setMoney() {
+    this.money = this.name === "水饺" ? 80 : 300;
+  }
 }
 
 /// eat.test.js
 import Eat from "./eat";
 const eat = new Eat();
-beforeAll(() => {  
-	console.log("开始吃饭");
+beforeAll(() => {
+  console.log("开始吃饭");
 });
-afterAll(() => {  
-	console.log("吃完饭了");
+afterAll(() => {
+  console.log("吃完饭了");
 });
-describe("水饺相关内容", () => {  
-	test("测试水饺描述", () => {    
-		eat.setName(1);    
-		eat.setDesc();    
-		expect(eat.desc).toEqual("水饺描述");  
-	});  
-	test("测试水饺价格", () => {    
-		eat.setName(1);    
-		eat.setMoney();    
-		expect(eat.money).toEqual(80);  
-	});
+describe("水饺相关内容", () => {
+  test("测试水饺描述", () => {
+    eat.setName(1);
+    eat.setDesc();
+    expect(eat.desc).toEqual("水饺描述");
+  });
+  test("测试水饺价格", () => {
+    eat.setName(1);
+    eat.setMoney();
+    expect(eat.money).toEqual(80);
+  });
 });
-describe("火锅相关内容", () => {  
-	test("测试火锅描述", () => {    
-		eat.setName(2);    
-		eat.setDesc();    
-		expect(eat.desc).toEqual("火锅描述");  
-	});  
-	test("测试火锅价格", () => {    
-		eat.setName(2);    
-		eat.setMoney();    
-		expect(eat.money).toEqual(300);  
-	});
+describe("火锅相关内容", () => {
+  test("测试火锅描述", () => {
+    eat.setName(2);
+    eat.setDesc();
+    expect(eat.desc).toEqual("火锅描述");
+  });
+  test("测试火锅价格", () => {
+    eat.setName(2);
+    eat.setMoney();
+    expect(eat.money).toEqual(300);
+  });
 });
 ```
 
@@ -517,8 +519,8 @@ describe("火锅相关内容", () => {
 当一个测试文件中的测试用例变得越来越多的时候，假如此时我们相对其中某一个测试用例进行调试，那么我们就需要使用 `test.only`
 
 ```jsx
-test.only("测试用例", () => {  
-	expect(1 + 1).toBe(2);
+test.only("测试用例", () => {
+  expect(1 + 1).toBe(2);
 });
 ```
 
@@ -536,16 +538,16 @@ test.only("测试用例", () => {
 
 ```jsx
 // demo.js
-export const runCallback = callback => {  
-	callback();
+export const runCallback = callback => {
+  callback();
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-test("测试 runCallback", () => {  
-	const func = jest.fn();  
-	runCallback(func);  
-	expect(func).toBeCalled(); // 测试用例被调用
+test("测试 runCallback", () => {
+  const func = jest.fn();
+  runCallback(func);
+  expect(func).toBeCalled(); // 测试用例被调用
 });
 ```
 
@@ -555,18 +557,18 @@ test("测试 runCallback", () => {
 
 ```jsx
 // demo.js
-export const runCallback = callback => {  
-	callback("张三");
+export const runCallback = callback => {
+  callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-test("测试 runCallback", () => {  
-	const func = jest.fn();  
-	runCallback(func);  
-	runCallback(func);  
-	expect(func.mock.calls.length).toBe(2); // 测试用例被调用2次  
-	expect(func.mock.calls[0]).toEqual(["张三"]); // 测试用例传递的第一个参数是 "张三"
+test("测试 runCallback", () => {
+  const func = jest.fn();
+  runCallback(func);
+  runCallback(func);
+  expect(func.mock.calls.length).toBe(2); // 测试用例被调用2次
+  expect(func.mock.calls[0]).toEqual(["张三"]); // 测试用例传递的第一个参数是 "张三"
 });
 ```
 
@@ -576,25 +578,25 @@ test("测试 runCallback", () => {
 
 ```jsx
 // demo.js
-export const runCallback = callback => {  
-	callback("张三");
+export const runCallback = callback => {
+  callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-test("测试 runCallback", () => {  
-	const func = jest.fn();  
-	// func.mockReturnValue("Common") 
-	// 所有模拟返回值都是 "Common"  
-	func.mockReturnValueOnce("A"); // 第一次模拟返回值返回 "A"  
-	func.mockReturnValueOnce("B"); // 第二次模拟返回值返回 "B"  
-	func.mockReturnValueOnce("C"); // 第三次模拟返回值返回 "C"  
-	runCallback(func);  
-	runCallback(func);  
-	runCallback(func);  
-	expect(func.mock.results[0].value).toBe("A");  
-	expect(func.mock.results[1].value).toBe("B");  
-	expect(func.mock.results[2].value).toBe("C");
+test("测试 runCallback", () => {
+  const func = jest.fn();
+  // func.mockReturnValue("Common")
+  // 所有模拟返回值都是 "Common"
+  func.mockReturnValueOnce("A"); // 第一次模拟返回值返回 "A"
+  func.mockReturnValueOnce("B"); // 第二次模拟返回值返回 "B"
+  func.mockReturnValueOnce("C"); // 第三次模拟返回值返回 "C"
+  runCallback(func);
+  runCallback(func);
+  runCallback(func);
+  expect(func.mock.results[0].value).toBe("A");
+  expect(func.mock.results[1].value).toBe("B");
+  expect(func.mock.results[2].value).toBe("C");
 });
 ```
 
@@ -608,18 +610,18 @@ test("测试 runCallback", () => {
 
 ```jsx
 // demo.js
-export const runCallback = callback => {  
-	callback("张三");
+export const runCallback = callback => {
+  callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-test("测试 runCallback", () => {  
-	const func = jest.fn();  
-	runCallback(func);  
-	runCallback(func);  
-	runCallback(func);  
-	expect(func.mock.invocationCallOrder).toEqual([1, 2, 3]);
+test("测试 runCallback", () => {
+  const func = jest.fn();
+  runCallback(func);
+  runCallback(func);
+  runCallback(func);
+  expect(func.mock.invocationCallOrder).toEqual([1, 2, 3]);
 });
 ```
 
@@ -627,14 +629,14 @@ test("测试 runCallback", () => {
 
 ```jsx
 // demo.js
-export const createObject = (ClassItem) => {    
+export const createObject = (ClassItem) => {
 	new ClassItem();}
 
 // demo.test.js
 import { createObject } from "./demo";
-test("测试 createObject", () => {    
-	const func = jest.fn();    
-	createObject(func);    
+test("测试 createObject", () => {
+	const func = jest.fn();
+	createObject(func);
 	expect(func.mock.instances).toEqual([mockConstructor{}]); // 此处的 this 就是 mockConstructor
 });
 ```
@@ -643,23 +645,23 @@ test("测试 createObject", () => {
 
 ```jsx
 // demo.js
-export const runCallback = callback => {  
-	callback("张三");
+export const runCallback = callback => {
+  callback("张三");
 };
 
 // demo.test.js
 import { runCallback } from "./demo";
-test("测试 runCallback", () => {  
-	const func = jest.fn();  
-	// func.mockImplementation(() => "hello"); 等价于 jest.fn(() => "hello")  
-	// func.mockImplementation(() => this); 等价于 jest.fn().mockReturnThis()  
-	func.mockImplementationOnce(() => "dell");  
-	func.mockImplementationOnce(() => "lee");  
-	runCallback(func);  
-	runCallback(func); 
-	runCallback(func);  
-	expect(func.mock.results[0].value).toBe("dell");  
-	expect(func.mock.results[1].value).toBe("lee");
+test("测试 runCallback", () => {
+  const func = jest.fn();
+  // func.mockImplementation(() => "hello"); 等价于 jest.fn(() => "hello")
+  // func.mockImplementation(() => this); 等价于 jest.fn().mockReturnThis()
+  func.mockImplementationOnce(() => "dell");
+  func.mockImplementationOnce(() => "lee");
+  runCallback(func);
+  runCallback(func);
+  runCallback(func);
+  expect(func.mock.results[0].value).toBe("dell");
+  expect(func.mock.results[1].value).toBe("lee");
 });
 ```
 
@@ -669,16 +671,16 @@ test("测试 runCallback", () => {
 
 ```jsx
 // demo.js
-export const runCallback = (callback) => {    
+export const runCallback = (callback) => {
 	callback("ABC");
 }
 
 // demo.test.js
 import { runCallback } from "./demo";
-test("测试 runCallback", () => {    
-	const func = jest.fn();    
-	runCallback(func);    
-	expect(func.mock.results[0]).toEqual(["ABC");    
+test("测试 runCallback", () => {
+	const func = jest.fn();
+	runCallback(func);
+	expect(func.mock.results[0]).toEqual(["ABC");
 	expect(func).toBeCalledWith("ABC");
 });
 ```
@@ -691,19 +693,19 @@ test("测试 runCallback", () => {
 
 ```jsx
 // demo.js
-export const getData = () => {  
-	return axios.get("/api").then(res => res.data);
+export const getData = () => {
+  return axios.get("/api").then(res => res.data);
 };
 
 // demo.test.js
 import axios from "axios";
 import { getData } from "./demo";
 jest.mock("axios"); // 对 axios 进行模拟，这样就不会请求真正数据
-test("测试 getData", async () => {  
-	axios.get.mockResolvedValue({ data: "hello" }); // 使用 axios 请求的时候模拟成功的返回值就是 hello  
-	await getData().then(data => {    
-		expect(data).toBe("hello");  
-	});
+test("测试 getData", async () => {
+  axios.get.mockResolvedValue({ data: "hello" }); // 使用 axios 请求的时候模拟成功的返回值就是 hello
+  await getData().then(data => {
+    expect(data).toBe("hello");
+  });
 });
 ```
 
@@ -715,27 +717,27 @@ test("测试 getData", async () => {
 
 ```jsx
 // demo.js
-export const fetchData = () => {  
-	return axios.get("/").then(res => res.data);
+export const fetchData = () => {
+  return axios.get("/").then(res => res.data);
 };
 
 // __mocks__/demo.js
-export const fetchData = () => {  
-	return new Promise((resolve, reject) => {    
-		resolve("function() { return '123' }");  
-	});
+export const fetchData = () => {
+  return new Promise((resolve, reject) => {
+    resolve("function() { return '123' }");
+  });
 };
 
 // demo.test.js
 jest.mock("./demo");
 import { fetchData } from "./demo";
-test("测试fetchData", () => {  
-	return fetchData().then(data => {    
-		expect(eval(data)).toEqual("123");  
-	});
+test("测试fetchData", () => {
+  return fetchData().then(data => {
+    expect(eval(data)).toEqual("123");
+  });
 });
 
-/// 实现方式3 
+/// 实现方式3
 // 修改jest.config.js 可以自动查找项目内部__mocks__下与要测试文件名字相同的文件做替换
 // 等同于 jest.mock("要测试文件名字相同的__mocks__下的文件"){  automock: true; }
 ```
@@ -752,30 +754,30 @@ test("测试fetchData", () => {
 
 ```jsx
 // demo.js
-export const fetchData = () => {  
-	return axios.get("/").then(res => res.data);
+export const fetchData = () => {
+  return axios.get("/").then(res => res.data);
 };
 export const getNumber = () => 123;
 
 // __mocks__/demo.js
-export const fetchData = () => {  
-	return new Promise((resolve, reject) => {    
-		resolve("function() { return '123' }");  
-	});
+export const fetchData = () => {
+  return new Promise((resolve, reject) => {
+    resolve("function() { return '123' }");
+  });
 };
 
 // demo.test.js
 jest.mock("./demo");
 import { fetchData } from "./demo";
 const { getNumber } = jest.requireActual("./demo"); // 引入真实文件
-test("测试 fetchData", () => {  
-	return fetchData().then(data => {    
-		expect(eval(data)).toEqual("123");  
-	});
+test("测试 fetchData", () => {
+  return fetchData().then(data => {
+    expect(eval(data)).toEqual("123");
+  });
 });
 
-test("测试 getNumber", () => {  
-	expect(getNumber()).toEqual(123);
+test("测试 getNumber", () => {
+  expect(getNumber()).toEqual(123);
 });
 ```
 
@@ -787,18 +789,18 @@ test("测试 getNumber", () => {
 
 ```jsx
 // demo.js
-export const generateConfig = () => {  
-	return {    
-		server: "http://localhost",    
-		port: 8080,    
-		domain: "localhost"  
-	};
+export const generateConfig = () => {
+  return {
+    server: "http://localhost",
+    port: 8080,
+    domain: "localhost"
+  };
 };
 
 // demo.test.js
 import { generateConfig } from "./demo";
-test("测试 generateConfig", () => {  
-	expect(generateConfig()).toMatchSnapshot(); // 将会在项目里生成快照文件
+test("测试 generateConfig", () => {
+  expect(generateConfig()).toMatchSnapshot(); // 将会在项目里生成快照文件
 });
 ```
 
@@ -808,25 +810,25 @@ test("测试 generateConfig", () => {
 
 ```jsx
 // demo.js
-export const generateConfig = () => {  
-	return {    
-		server: "http://localhost",    
-		port: 8080,    
-		domain: "localhost",    
-		time: new Date(), 
-		// 可变变量    
-		random: Math.random() 
-		// 可变变量  
-	};
+export const generateConfig = () => {
+  return {
+    server: "http://localhost",
+    port: 8080,
+    domain: "localhost",
+    time: new Date(),
+    // 可变变量
+    random: Math.random()
+    // 可变变量
+  };
 };
 
 // demo.test.js
 import { generateConfig } from "./demo";
-test("测试 generateConfig", () => {  
-	expect(generateConfig()).toMatchSnapshot({    
-		time: expect.any(Date),    
-		random: expect.any(Number)  
-	});
+test("测试 generateConfig", () => {
+  expect(generateConfig()).toMatchSnapshot({
+    time: expect.any(Date),
+    random: expect.any(Number)
+  });
 });
 ```
 
@@ -838,26 +840,26 @@ test("测试 generateConfig", () => {
 
 ```jsx
 // demo.js
-export const generateConfig = () => {  
-	return {    
-		server: "http://localhost",    
-		port: 8080,    
-		domain: "localhost",    
-		time: new Date(), 
-		// 可变变量    
-		random: Math.random() 
-		// 可变变量  
-	};
+export const generateConfig = () => {
+  return {
+    server: "http://localhost",
+    port: 8080,
+    domain: "localhost",
+    time: new Date(),
+    // 可变变量
+    random: Math.random()
+    // 可变变量
+  };
 };
 
 // demo.test.js
 import { generateConfig } from "./demo";
-test("测试 generateConfig", () => {  
-	// toMatchInlineSnapshot 可以快照放到行内的测试用例中  
-	expect(generateConfig()).toMatchInlineSnapshot({    
-		time: expect.any(Date),    
-		random: expect.any(Number)  
-	});
+test("测试 generateConfig", () => {
+  // toMatchInlineSnapshot 可以快照放到行内的测试用例中
+  expect(generateConfig()).toMatchInlineSnapshot({
+    time: expect.any(Date),
+    random: expect.any(Number)
+  });
 });
 ```
 
@@ -899,8 +901,8 @@ test("测试 generateConfig", () => {
 
 ```jsx
 /// testUtils.js
-export const findTestWrapper = (wrapper, tag) => {  
-	return wrapper.find(`[data-test="${tag}"]`);
+export const findTestWrapper = (wrapper, tag) => {
+  return wrapper.find(`[data-test="${tag}"]`);
 };
 ```
 
@@ -914,18 +916,18 @@ it(`
 	新增内容逻辑的集成测试    
 	1. 用户会在header输入框输入内容    
 	2. 用户会点击回车按钮  
-	3. 列表项应该增加用户输入内容的列表项`, () => {  
-	const wrapper = mount(TodoList);  
-	// const wrapper = mount(TodoList, { store }) 
-	// 如果使用 vuex，也几乎无改动  
-	const inputElem = findTestWrapper(wrapper, "header-input").at(0);  
-	const content = "Dell lee";  
-	inputElem.setValue(content);  
-	inputElem.trigger("change");  
-	inputElem.trigger("keyup.enter");  
-	const listItems = findTestWrapper(wrapper, "list-item").at(0);  
-	expect(listItems.length).toBe(1);  
-	expect(listItems.at(0).text()).toContain(content);
+	3. 列表项应该增加用户输入内容的列表项`, () => {
+  const wrapper = mount(TodoList);
+  // const wrapper = mount(TodoList, { store })
+  // 如果使用 vuex，也几乎无改动
+  const inputElem = findTestWrapper(wrapper, "header-input").at(0);
+  const content = "Dell lee";
+  inputElem.setValue(content);
+  inputElem.trigger("change");
+  inputElem.trigger("keyup.enter");
+  const listItems = findTestWrapper(wrapper, "list-item").at(0);
+  expect(listItems.length).toBe(1);
+  expect(listItems.at(0).text()).toContain(content);
 });
 ```
 
@@ -933,8 +935,8 @@ it(`
 
 ```jsx
 /// testUtils.js
-export const findTestWrapper = (wrapper, tag) => {  
-	return wrapper.find(`[data-test="${tag}"]`);
+export const findTestWrapper = (wrapper, tag) => {
+  return wrapper.find(`[data-test="${tag}"]`);
 };
 ```
 
@@ -994,10 +996,10 @@ it(`
 ```jsx
 /// __tests__/unit/store.test.js
 import store from "../../../../store";
-it("当 store 接受 changeInputValue 的 commit 时, inputValue 发生变化", () => {  
-	const value = "123";  
-	store.commit("changeInputValue", value);  
-	expect(store.state.inputValue).toBe(value);
+it("当 store 接受 changeInputValue 的 commit 时, inputValue 发生变化", () => {
+  const value = "123";
+  store.commit("changeInputValue", value);
+  expect(store.state.inputValue).toBe(value);
 });
 ```
 
@@ -1007,15 +1009,15 @@ it("当 store 接受 changeInputValue 的 commit 时, inputValue 发生变化", 
 /// __tests__/unit/store.test.js
 import store from "../../../../store/createStore";
 import { changeInputValue } from "../../../../store/actions";
-it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化", () => {  
-	const value = "123";  
-	/**   
+it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化", () => {
+  const value = "123";
+  /**   
 		const changeInputValue = (payload) => ({ 
 			type: CHANGE_IMPUT_VALUE, payload 
 		})   
-	*/  
-	store.dispatch(changeInputValue(value));  
-	expect(store.getState().inputValue).toBe(value);
+	*/
+  store.dispatch(changeInputValue(value));
+  expect(store.getState().inputValue).toBe(value);
 });
 ```
 
@@ -1029,21 +1031,21 @@ it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化"
 
 ```jsx
 /// __mocks__/axios.js
-const undoList = {  success: true,  data: [    
-	{ status: "div", value: "dell" },    
-	{ status: "div", value: "lee" }  
+const undoList = {  success: true,  data: [
+	{ status: "div", value: "dell" },
+	{ status: "div", value: "lee" }
 ]};
-export default {  
-	get(url) {    
-		if (url === "/getUndoList.json") {      
-			return new Promise((resolve, reject) => {        
-				if (this.success === true) {          
-					resolve(undoList);        
-				} else {          
-					reject(new Error());        
-				}      
-			});    
-		}  
+export default {
+	get(url) {
+		if (url === "/getUndoList.json") {
+			return new Promise((resolve, reject) => {
+				if (this.success === true) {
+					resolve(undoList);
+				} else {
+					reject(new Error());
+				}
+			});
+		}
 	}};
 
 /// __tests__/integration/TodoList.test.js
@@ -1052,37 +1054,37 @@ import { findTestWrapper } from "../../../../utils/testUtils";
 import TodoList from "../../TodoList";
 import store from "../../../../store";
 
-beforeEach(() => {  
-	axios.success = true;  
+beforeEach(() => {
+	axios.success = true;
 	jest.useFakeTimers(); // 写在钩子函数中的意义是为了清除统计次数，重新开始，防止上一个测试用例对下一个测试用例产生影响});
-it(`1. 用户进入页面时，请求远程测试; 2. 列表应该显示远程返回的数据`, done => {  
-		const wrapper = mount(TodoList, { store });  
-		wrapper.vm.$nickTick(() => {    
-			const listItems = findTestWrapper(wrapper, "list-item");    
-			expect(listItems.length).toBe(2);    
-			done();  
+it(`1. 用户进入页面时，请求远程测试; 2. 列表应该显示远程返回的数据`, done => {
+		const wrapper = mount(TodoList, { store });
+		wrapper.vm.$nickTick(() => {
+			const listItems = findTestWrapper(wrapper, "list-item");
+			expect(listItems.length).toBe(2);
+			done();
 		});
 	});
-it(`1. 用户进入页面时，等待5s; 2. 列表应该显示远程返回的数据`, done => {  
-	const wrapper = mount(TodoList, { store });  
-	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器  
-	jest.runAllTimers();  
-	wrapper.vm.$nickTick(() => {    
-		const listItems = findTestWrapper(wrapper, "list-item");    
-		expect(listItems.length).toBe(2);    
-		done();  
+it(`1. 用户进入页面时，等待5s; 2. 列表应该显示远程返回的数据`, done => {
+	const wrapper = mount(TodoList, { store });
+	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
+	jest.runAllTimers();
+	wrapper.vm.$nickTick(() => {
+		const listItems = findTestWrapper(wrapper, "list-item");
+		expect(listItems.length).toBe(2);
+		done();
 	});
 });
 
-it(`1. 用户进入页面时，请求远程数据失败; 2. 列表应该显示空数据，不应该挂掉`, done => {  
-	axios.success = false;  
-	const wrapper = mount(TodoList, { store });  
-	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器  
-	jest.runAllTimers();  
-	wrapper.vm.$nickTick(() => {    
-		const listItems = findTestWrapper(wrapper, "list-item");    
-		expect(listItems.length).toBe(0);    
-		done();  
+it(`1. 用户进入页面时，请求远程数据失败; 2. 列表应该显示空数据，不应该挂掉`, done => {
+	axios.success = false;
+	const wrapper = mount(TodoList, { store });
+	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
+	jest.runAllTimers();
+	wrapper.vm.$nickTick(() => {
+		const listItems = findTestWrapper(wrapper, "list-item");
+		expect(listItems.length).toBe(0);
+		done();
 	});
 });
 ```
@@ -1194,20 +1196,21 @@ it(`
 // HelloWorld.test.js
 import Vue from "vue";
 import HelloWorld from "@/components/HelloWorld";
-describe("HelloWorld.vue", () => {  
-	it("renders props.msg when passed", () => {    
-		const root = document.createElement("div");    
-		root.className = "root";    
-		document.body.appendChild(root);   
-		new Vue({      
-			render: h => h(HelloWorld, {          
-				props: {            
-					msg: "dell lee"          
-				}        
-			})    
-		}).$mount(".root");    
-		expect(document.getElementByClassName("hello").length).toBe(1);  
-	});
+describe("HelloWorld.vue", () => {
+  it("renders props.msg when passed", () => {
+    const root = document.createElement("div");
+    root.className = "root";
+    document.body.appendChild(root);
+    new Vue({
+      render: h =>
+        h(HelloWorld, {
+          props: {
+            msg: "dell lee"
+          }
+        })
+    }).$mount(".root");
+    expect(document.getElementByClassName("hello").length).toBe(1);
+  });
 });
 ```
 
@@ -1223,14 +1226,14 @@ describe("HelloWorld.vue", () => {
 // HelloWorld.test.js
 import { shallowMount } from "@vue/test-utils";
 import HelloWorld from "@/components/HelloWorld";
-describe("HelloWorld.vue", () => {  
-	it("renders props.msg when passed", () => {    
-		const msg = "dell lee";    
-		const wrapper = shallowMount(HelloWorld, {      
-			propsData: { msg }    
-		});    
-		expect(wrapper.text()).toMatch(msg);  
-	});
+describe("HelloWorld.vue", () => {
+  it("renders props.msg when passed", () => {
+    const msg = "dell lee";
+    const wrapper = shallowMount(HelloWorld, {
+      propsData: { msg }
+    });
+    expect(wrapper.text()).toMatch(msg);
+  });
 });
 ```
 
@@ -1244,14 +1247,14 @@ describe("HelloWorld.vue", () => {
 // HelloWorld.test.js
 import { shallowMount } from "@vue/test-utils";
 import HelloWorld from "@/components/HelloWorld";
-describe("HelloWorld.vue 组件渲染正常", () => {  
-	it("renders props.msg when passed", () => {    
-		const msg = "dell lee";    
-		const wrapper = shallowMount(HelloWorld, {      
-			propsData: { msg }    
-		});    
-		expect(wrapper).toMatchSnapshot();  
-	});
+describe("HelloWorld.vue 组件渲染正常", () => {
+  it("renders props.msg when passed", () => {
+    const msg = "dell lee";
+    const wrapper = shallowMount(HelloWorld, {
+      propsData: { msg }
+    });
+    expect(wrapper).toMatchSnapshot();
+  });
 });
 ```
 
@@ -1292,9 +1295,9 @@ import Enzyme, { shallow } from "enzyme";
 import Adapter from "enzyme-adapter-react-16";
 import App from "App";
 Enzyme.configure({ adapter: new Adapter() });
-it("render App", () => {  
-	const wrapper = shallow(<App />);  
-	expect(wrapper.find('[data-test="App"]').length).toBe(2);
+it("render App", () => {
+  const wrapper = shallow(<App />);
+  expect(wrapper.find('[data-test="App"]').length).toBe(2);
 });
 ```
 
@@ -1317,9 +1320,9 @@ import Enzyme, { shallow } from "enzyme";
 import Adapter from "enzyme-adapter-react-16";
 import App from "App";
 Enzyme.configure({ adapter: new Adapter() });
-it("render App", () => {  
-	const wrapper = shallow(<App />);  
-	expect(wrapper).toMatchSnapshot();
+it("render App", () => {
+  const wrapper = shallow(<App />);
+  expect(wrapper).toMatchSnapshot();
 });
 ```
 
