--- a/Vue/前端自动化测试.md
+++ b/Vue/前端自动化测试.md
@@ -358,9 +358,9 @@ export const fetchTwoData = () => axios.get("http://a.jspang.com/jestTest.json";
 /// fetchTwoData.test.js
 import { fetchTwoData } from "./fetchTwoData.js";
 test("fetchTwoData的测试用例", () => {
-	return fetchTwoData().then(res => {
-		expect(res.data).toEqual({ success: true });
-	});
+ return fetchTwoData().then(res => {
+  expect(res.data).toEqual({ success: true });
+ });
 });
 ```
 
@@ -406,22 +406,22 @@ test("fetchData测试", async () => {
 ```jsx
 /// fetchData.js
 export const fetchData = () => {
-	return axios.get("http://a.jspang.com/jestTest.json"); // 此地址并不存在};
+ return axios.get("http://a.jspang.com/jestTest.json"); // 此地址并不存在};
 
 /// fetchData.test.js
 // 方式1
 test("fetchData测试", async () => {
-	await expect(fetchData()).resolves.toMatchObject({
-		data: {
-			success: true
-		}
-	});
+ await expect(fetchData()).resolves.toMatchObject({
+  data: {
+   success: true
+  }
+ });
 });
 
 // 方式2
 test("fetchData测试", async () => {
-	const response = await fetchData();
-	expect(response.data).toEqual({ success: true });
+ const response = await fetchData();
+ expect(response.data).toEqual({ success: true });
 });
 ```
 
@@ -630,14 +630,15 @@ test("测试 runCallback", () => {
 ```jsx
 // demo.js
 export const createObject = (ClassItem) => {
-	new ClassItem();}
+  new ClassItem();
+}
 
 // demo.test.js
 import { createObject } from "./demo";
 test("测试 createObject", () => {
-	const func = jest.fn();
-	createObject(func);
-	expect(func.mock.instances).toEqual([mockConstructor{}]); // 此处的 this 就是 mockConstructor
+  const func = jest.fn();
+  createObject(func);
+  expect(func.mock.instances).toEqual([mockConstructor{}]); // 此处的 this 就是 mockConstructor
 });
 ```
 
@@ -672,16 +673,16 @@ test("测试 runCallback", () => {
 ```jsx
 // demo.js
 export const runCallback = (callback) => {
-	callback("ABC");
+  callback("ABC");
 }
 
 // demo.test.js
 import { runCallback } from "./demo";
 test("测试 runCallback", () => {
-	const func = jest.fn();
-	runCallback(func);
-	expect(func.mock.results[0]).toEqual(["ABC");
-	expect(func).toBeCalledWith("ABC");
+  const func = jest.fn();
+  runCallback(func);
+  expect(func.mock.results[0]).toEqual(["ABC");
+  expect(func).toBeCalledWith("ABC");
 });
 ```
 
@@ -913,10 +914,10 @@ import { findTestWrapper } from "../../../../utils/testUtils";
 import TodoList from "../../TodoList";
 // import store from "../../../../store"
 it(`    
-	新增内容逻辑的集成测试    
-	1. 用户会在header输入框输入内容    
-	2. 用户会点击回车按钮  
-	3. 列表项应该增加用户输入内容的列表项`, () => {
+ 新增内容逻辑的集成测试    
+ 1. 用户会在header输入框输入内容    
+ 2. 用户会点击回车按钮  
+ 3. 列表项应该增加用户输入内容的列表项`, () => {
   const wrapper = mount(TodoList);
   // const wrapper = mount(TodoList, { store })
   // 如果使用 vuex，也几乎无改动
@@ -954,17 +955,17 @@ it(`
     新增内容逻辑的集成测试
     1. 用户会在header输入框输入内容
     2. 用户会点击回车按钮
-	  3. 列表项应该增加用户输入内容的列表项
+   3. 列表项应该增加用户输入内容的列表项
 `, () => {
   const wrapper = mount(<TodoList />);
   /** 
-		const wrapper = mount(
-			<Provider store={store}>
-				<TodoList /></Provider>
-			</Provider>
-		)  
-		// 如果使用 redux，也几乎无改动
-	*/
+  const wrapper = mount(
+   <Provider store={store}>
+    <TodoList /></Provider>
+   </Provider>
+  )  
+  // 如果使用 redux，也几乎无改动
+ */
   const inputElem = findTestWrapper(wrapper, "header-input");
   const content = "Dell lee";
   inputElem.simulate("change", { target: { value: content } });
@@ -1012,10 +1013,10 @@ import { changeInputValue } from "../../../../store/actions";
 it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化", () => {
   const value = "123";
   /**   
-		const changeInputValue = (payload) => ({ 
-			type: CHANGE_IMPUT_VALUE, payload 
-		})   
-	*/
+  const changeInputValue = (payload) => ({ 
+   type: CHANGE_IMPUT_VALUE, payload 
+  })   
+ */
   store.dispatch(changeInputValue(value));
   expect(store.getState().inputValue).toBe(value);
 });
@@ -1029,24 +1030,24 @@ it("当 store 接受 changeInputValue 的 dispatch 时, inputValue 发生变化"
 
 ### 13.1 vue 的异步测试
 
-```jsx
+```js
 /// __mocks__/axios.js
 const undoList = {  success: true,  data: [
-	{ status: "div", value: "dell" },
-	{ status: "div", value: "lee" }
+ { status: "div", value: "dell" },
+ { status: "div", value: "lee" }
 ]};
 export default {
-	get(url) {
-		if (url === "/getUndoList.json") {
-			return new Promise((resolve, reject) => {
-				if (this.success === true) {
-					resolve(undoList);
-				} else {
-					reject(new Error());
-				}
-			});
-		}
-	}};
+ get(url) {
+  if (url === "/getUndoList.json") {
+   return new Promise((resolve, reject) => {
+    if (this.success === true) {
+     resolve(undoList);
+    } else {
+     reject(new Error());
+    }
+   });
+  }
+ }};
 
 /// __tests__/integration/TodoList.test.js
 import { mount } from "@vue/test-utils";
@@ -1055,37 +1056,37 @@ import TodoList from "../../TodoList";
 import store from "../../../../store";
 
 beforeEach(() => {
-	axios.success = true;
-	jest.useFakeTimers(); // 写在钩子函数中的意义是为了清除统计次数，重新开始，防止上一个测试用例对下一个测试用例产生影响});
+ axios.success = true;
+ jest.useFakeTimers(); // 写在钩子函数中的意义是为了清除统计次数，重新开始，防止上一个测试用例对下一个测试用例产生影响});
 it(`1. 用户进入页面时，请求远程测试; 2. 列表应该显示远程返回的数据`, done => {
-		const wrapper = mount(TodoList, { store });
-		wrapper.vm.$nickTick(() => {
-			const listItems = findTestWrapper(wrapper, "list-item");
-			expect(listItems.length).toBe(2);
-			done();
-		});
-	});
+  const wrapper = mount(TodoList, { store });
+  wrapper.vm.$nickTick(() => {
+   const listItems = findTestWrapper(wrapper, "list-item");
+   expect(listItems.length).toBe(2);
+   done();
+  });
+ });
 it(`1. 用户进入页面时，等待5s; 2. 列表应该显示远程返回的数据`, done => {
-	const wrapper = mount(TodoList, { store });
-	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
-	jest.runAllTimers();
-	wrapper.vm.$nickTick(() => {
-		const listItems = findTestWrapper(wrapper, "list-item");
-		expect(listItems.length).toBe(2);
-		done();
-	});
+ const wrapper = mount(TodoList, { store });
+ expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
+ jest.runAllTimers();
+ wrapper.vm.$nickTick(() => {
+  const listItems = findTestWrapper(wrapper, "list-item");
+  expect(listItems.length).toBe(2);
+  done();
+ });
 });
 
 it(`1. 用户进入页面时，请求远程数据失败; 2. 列表应该显示空数据，不应该挂掉`, done => {
-	axios.success = false;
-	const wrapper = mount(TodoList, { store });
-	expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
-	jest.runAllTimers();
-	wrapper.vm.$nickTick(() => {
-		const listItems = findTestWrapper(wrapper, "list-item");
-		expect(listItems.length).toBe(0);
-		done();
-	});
+ axios.success = false;
+ const wrapper = mount(TodoList, { store });
+ expect(setTimeout).toHaveBeenCalledTimes(1); // 至少执行一次定时器
+ jest.runAllTimers();
+ wrapper.vm.$nickTick(() => {
+  const listItems = findTestWrapper(wrapper, "list-item");
+  expect(listItems.length).toBe(0);
+  done();
+ });
 });
 ```
 
